Spacing issues

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -35,6 +35,3 @@ $tooltip-background-opacity: 1;
 
 td 
   width: 50%
-
-body  
-  overflow-x: hidden;
